--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name = "viewport" content = "width=device-width, minimum-scale=1.0, maximum-scale = 1.0, user-scalable = no">
-    <title>Document</title>
+    <title>M & T | Home</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
@@ -18,24 +18,25 @@
                     <li><a href="#">Clothes</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="aboutus.html">About Us</a></li>
-                    <li><a href="#">Locations</a></li>
+                    <li><a href="location.html">Locations</a></li>
                 </ul>
             </div>
            
         </div>
-        <div class="row">
-            <div class="col-2">
-                <h3>Hii, Do u knoww...</h3><br>
-                <h4>Fashion is part of the daily air and it changes all the time
-                    with all the events.<br> You can even see the approching of<br>
-                    a revoluation clothes... - Morden Cloths</h4>
-            </div>
-            <div class="col-2">
-                <img src="images/pngegg_2.png" alt="M&T Fashion">
-            </div>
-             <a id="Subscribe" href="subscribe.html">Subscribe Here </a>
-        </div>
     </header>
+
+    <div class="row">
+        <div class="col-2">
+            <h3>Hii, Do u knoww...</h3><br>
+            <h4>Fashion is part of the daily air and it changes all the time
+                with all the events.<br> You can even see the approching of<br>
+                a revoluation clothes... - Morden Cloths</h4>
+        </div>
+        <div class="col-2">
+            <img src="images/pngegg_2.png" alt="M&T Fashion">
+        </div>
+         <a id="Subscribe" href="subscribe.html">Subscribe Here </a>
+    </div>
 
 </body>
 </html>
