--- a/location.html
+++ b/location.html
@@ -4,25 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M & T | Locations</title>
+    <title>Locations | M & T</title>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles/locationStyles.css">
 </head>
 <body>
-    <header>
-        <div id="Main-Container">
-            <div id="Navbar">
-                <ul>
-                    <li class = "mt"><a href="main.html">M & T</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Clothes</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="aboutus.html">About Us</a></li>
-                    <li><a href="location.html">Locations</a></li>
-                </ul>
-            </div>
+    <nav class="navbar">
+        <div class="title">
+          <a href="#">M & T</a>
         </div>
-    </header>
+        <a href="#" class="toggle-button">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </a>
+        <div class="navbar-links">
+          <ul>
+            <li><a href="clothes.html">Clothes</a></li>
+            <li><a href="aboutus.html">About Us</a></li>
+            <li><a href="location.html">Location</a></li>
+            <li><a href="subscribe.html">Subscribe!</a></li>
+          </ul>
+        </div>
+    </nav>
     <div class = "image">
         <img class = "map" src="images/Indo map.png" alt="">
     </div>
@@ -54,7 +59,13 @@
             <h2>Bali</h2>
             <h4>Jl. Poros Mamasa</h4>
         </div>
-    
+        
+        <img class = "pin1" src="images/pngegg_3.png" alt="">
+        <img class = "pin2" src="images/pngegg_3.png" alt="">
+        <img class = "pin3" src="images/pngegg_3.png" alt="">
+        <img class = "pin4" src="images/pngegg_3.png" alt="">
+        <img class = "pin5" src="images/pngegg_3.png" alt="">
+        <img class = "pin6" src="images/pngegg_3.png" alt="">
     </div>
 </body>
 </html>
