--- a/main.html
+++ b/main.html
@@ -1,42 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name = "viewport" content = "width=device-width, minimum-scale=1.0, maximum-scale = 1.0, user-scalable = no">
-    <title>M & T | Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Home | M & T</title>
+    <script src="script.js" defer></script>efer></script>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
-    <header>
-        <div id="Main-Container">
-            <div id="Navbar">
-                <ul>
-                    <li class = "mt"><a href="main.html">M & T</a></li>
-                </ul>
-                <ul>
-                    <li><a href="#">Clothes</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="aboutus.html">About Us</a></li>
-                    <li><a href="location.html">Locations</a></li>
-                </ul>
-            </div>
-           
-        </div>
-    </header>
-
-    <div class="row">
-        <div class="col-2">
-            <h3>Hii, Do u knoww...</h3><br>
-            <h4>Fashion is part of the daily air and it changes all the time
-                with all the events.<br> You can even see the approching of<br>
-                a revoluation clothes... - Morden Cloths</h4>
-        </div>
-        <div class="col-2">
-            <img src="images/pngegg_2.png" alt="M&T Fashion">
-        </div>
-         <a id="Subscribe" href="subscribe.html">Subscribe Here </a>
+  <nav class="navbar">
+    <div class="title">
+      <a href="#">M & T</a>
     </div>
-
+    <a href="#" class="toggle-button">
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+      <span class="bar"></span>
+    </a>
+    <div class="navbar-links">
+      <ul>
+          <li><a href="clothes.html">Clothes</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+          <li><a href="location.html">Location</a></li>
+          <li><a href="subscribe.html">Subscribe!</a></li>ibe!</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="header">
+    <h1> Hi, do u know...</h1>
+    <div class="quote">
+    <p>Fashion is part of the daily air and it changes all the time</br>
+      with all the events. You can even see the approching of<br>
+      a revoluation clothes... - Morden Cloths</p>
+    </div>
+    
+    <div class="tag">
+      <h2>
+        Wear Clothes that matter<br>
+        So What are u waiting for??
+      </h2>
+    </div>
+    <div class="button">
+      <a href="clothes.html" class="btn">Explore Now</a>
+    </div>
+  </div>  
+  </div>
+  <div class="foto">
+      <img src="images/Male_Fashion.png" alt="foto">
+    </div>
 </body>
+
 </html>
