--- a/clothes.html
+++ b/clothes.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | M & T</title>
-    <script src="script.js" defer></script>
-    <link rel="stylesheet" href="styles/aboutus.css">
+    <title>Clothes | M & T</title>
+    <script src="/script.js" defer></script>
+    <link rel="stylesheet" href="styles/clothestyles.css">
 </head>
 <body>
     <nav class="navbar">
         <div class="title">
-          <a href="#">M & T</a>
+          <a href="main.html">M & T</a>
         </div>
         <a href="#" class="toggle-button">
           <span class="bar"></span>
@@ -28,13 +28,22 @@
           </ul>
         </div>
     </nav>
-    <img src="images/BackgroundPattern.png" alt="">
-    <div class = aboutUs>
-        <h1>ABOUT US</h1>
-        <h4>M&T is an Indonesian multinational clothing company that has been developing and exploring new fashion trends. Its branches are spread all over the world. M&T sells men’s fashionwear that are up to the current fashion trend.</h4>
+
+    <div class = "category"></div>
+      <h1 class = "categorytxt">CATEGORIES</h1>
     </div>
-    <div class = icon>
-        
+
+    <a href="tops.html">
+      <div class = "column">
+        <div class = "tops">
+          <h1 class = "topstxt">TOPS</h1>
+        </div>
+    </a>    
+    <a href="bottoms.html">
+      <div class = "bottoms"> 
+        <h1 class = "bottomstxt"> BOTTOMS</h1>
+      </div>
     </div>
+    </a>
 </body>
 </html>
