--- a/aboutus.html
+++ b/aboutus.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar">
         <div class="title">
-          <a href="#">M & T</a>
+          <a class = "name" href="main.html">M & T</a>
         </div>
         <a href="#" class="toggle-button">
           <span class="bar"></span>
