--- a/location.html
+++ b/location.html
@@ -29,7 +29,7 @@
         </div>
     </nav>
     <div class = "image">
-        <img class = "map" src="images/Indo map.png" alt="">
+        <img class = "map" src="images/MapIndo.png" alt="">
     </div>
     <h1>LOCATIONS</h1>
     <h2 class = "indonesia">Indonesia</h2>
@@ -59,13 +59,6 @@
             <h2>Bali</h2>
             <h4>Jl. Poros Mamasa</h4>
         </div>
-        
-        <img class = "pin1" src="images/pngegg_3.png" alt="">
-        <img class = "pin2" src="images/pngegg_3.png" alt="">
-        <img class = "pin3" src="images/pngegg_3.png" alt="">
-        <img class = "pin4" src="images/pngegg_3.png" alt="">
-        <img class = "pin5" src="images/pngegg_3.png" alt="">
-        <img class = "pin6" src="images/pngegg_3.png" alt="">
     </div>
 </body>
 </html>
