--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home | M & T</title>
-    <script src="script.js" defer></script>efer></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
@@ -26,7 +26,7 @@
           <li><a href="clothes.html">Clothes</a></li>
           <li><a href="aboutus.html">About Us</a></li>
           <li><a href="location.html">Location</a></li>
-          <li><a href="subscribe.html">Subscribe!</a></li>ibe!</a></li>
+          <li><a href="subscribe.html">Subscribe!</a></li>
       </ul>
     </div>
   </nav>
