--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 <body>
   <nav class="navbar">
     <div class="title">
-      <a href="#">M & T</a>
+      <a href="main.html">M & T</a>
     </div>
     <a href="#" class="toggle-button">
       <span class="bar"></span>
