--- a/subscribe.html
+++ b/subscribe.html
@@ -14,7 +14,7 @@
   <nav>
     <nav class="navbar">
       <div class="title">
-        <a href="#">M & T</a>
+        <a href="main.html">M & T</a>
       </div>
       <a href="#" class="toggle-button">
         <span class="bar"></span>
